--- a/functions/package.json
+++ b/functions/package.json
@@ -11,6 +11,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "async": "^2.6.0",
     "firebase-admin": "~5.12.0",
     "firebase-functions": "^1.0.1"
   },
