--- a/firebase.json
+++ b/firebase.json
@@ -19,6 +19,7 @@
     "rewrites": [
       {"source":"/api/categoria", "function":"categoria"},
       {"source":"/api/filtroPlat", "function":"filtroPlat"},
+      {"source":"/api/addPlatillo", "function":"addPlatillo"},
       {"source": "**","destination": "/index.html"}
     ]
   },
