--- a/firebase.json
+++ b/firebase.json
@@ -22,6 +22,7 @@
       {"source":"/api/addPlatillo", "function":"addPlatillo"},
       {"source":"/api/modPlatillo", "function":"modPlatillo"},
       {"source":"/api/delPlatillo", "function":"delPlatillo"},
+      {"source":"/api/addCarro", "function":"addCarro"},
       {"source": "**","destination": "/index.html"}
     ]
   },
