Leer descripción para más detalles
-modificado endpoint 'caja' pare enviar detalles más precisos del pedido a la hora de realizarlos
-verCarrito: nuevo endpoint que permite observar el estado actual del carrito
-setEstado: metodo generico para modificar el estado de un pedido, permite cambiar de 'pendiente' a 'aprobado'/'rechazado' y de 'aprobado' a 'finalizado', rechaza las demás solicitudes

--- a/firebase.json
+++ b/firebase.json
@@ -26,6 +26,8 @@
       {"source":"/api/delCarro", "function":"delCarro"},
       {"source":"/api/caja", "function":"caja"},
       {"source":"/api/filtroPedidos", "function":"filtroPedidos"},
+      {"source":"/api/verCarrito", "function":"verCarrito"},
+      {"source":"/api/setEstado", "function":"setEstado"},
       {"source": "**","destination": "/index.html"}
     ]
   },
