-Añadido contador de paginas a filtroPlat -Cambiado itemCarro para aceptar 'local' como una clave de ubicación valida -Añadida la paginación junto con contador de paginas a filtroPedidos -Añadido 'subirImagenPlat', que sube una imagen al platillo solicitado y retorna la URL

--- a/firebase.json
+++ b/firebase.json
@@ -28,6 +28,7 @@
       {"source":"/api/filtroPedidos", "function":"filtroPedidos"},
       {"source":"/api/verCarrito", "function":"verCarrito"},
       {"source":"/api/setEstado", "function":"setEstado"},
+      {"source":"/api/subirImagenPlat", "function":"subirImagenPlat"},
       {"source": "**","destination": "/index.html"}
     ]
   },
