--- a/firebase.json
+++ b/firebase.json
@@ -29,7 +29,7 @@
       {"source":"/api/verCarrito", "function":"verCarrito"},
       {"source":"/api/setEstado", "function":"setEstado"},
       {"source":"/api/subirImagenPlat", "function":"subirImagenPlat"},
-      {"source":"/api/setCliente", "function":"setCliente"},
+      {"source":"/api/setUsuario", "function":"setUsuario"},
       {"source": "**","destination": "/index.html"}
     ]
   },
