Corrección de errores y más...
-base64MimeType permite obtener el MIMEtag
-addPlatillo y modPlatillo no requiere el campo imagen
-subirImagenPlat: ahora reconoce si el archivo enviado no es una imagen
-setUsuario no crea una tarjeta al usuario
-nuevo endpoint: addRestaurante

--- a/firebase.json
+++ b/firebase.json
@@ -30,6 +30,8 @@
       {"source":"/api/setEstado", "function":"setEstado"},
       {"source":"/api/subirImagenPlat", "function":"subirImagenPlat"},
       {"source":"/api/setUsuario", "function":"setUsuario"},
+      {"source":"/api/setTarjeta", "function":"setTarjeta"},
+      {"source":"/api/addRestaurante", "function":"addRestaurante"},
       {"source": "**","destination": "/index.html"}
     ]
   },
