--- a/firebase.json
+++ b/firebase.json
@@ -81,6 +81,10 @@
 			"function": "subirImagenRest"
 		},
 		{
+			"source": "/api/calificar",
+			"function": "calificar"
+		},
+		{
 			"source": "**",
 			"destination": "/index.html"
 		}]
