EndPoints -limpiarPedidos: EndPoint que permite autorechazar todos los pedidos pendientes que hayan exedido su fecha de entrega

--- a/firebase.json
+++ b/firebase.json
@@ -85,6 +85,10 @@
 			"function": "calificar"
 		},
 		{
+			"source": "/api/limpiarPedidos",
+			"function": "limpiarPedidos"
+		},
+		{
 			"source": "**",
 			"destination": "/index.html"
 		}]
