--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -25,6 +25,7 @@
     "@types/googlemaps": "^3.30.8",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ngx-pagination": "^3.1.1",
     "rxjs": "^5.5.6",
