--- a/firebase.json
+++ b/firebase.json
@@ -12,81 +12,10 @@
 		"ignore": ["firebase.json",
 		"**/.*",
 		"**/node_modules/**"],
-		"rewrites": [{
-			"source": "/api/categoria",
-			"function": "categoria"
-		},
+		"rewrites": [
 		{
-			"source": "/api/filtroPlat",
-			"function": "filtroPlat"
-		},
-		{
-			"source": "/api/addPlatillo",
-			"function": "addPlatillo"
-		},
-		{
-			"source": "/api/modPlatillo",
-			"function": "modPlatillo"
-		},
-		{
-			"source": "/api/delPlatillo",
-			"function": "delPlatillo"
-		},
-		{
-			"source": "/api/itemCarro",
-			"function": "itemCarro"
-		},
-		{
-			"source": "/api/delCarro",
-			"function": "delCarro"
-		},
-		{
-			"source": "/api/caja",
-			"function": "caja"
-		},
-		{
-			"source": "/api/filtroPedidos",
-			"function": "filtroPedidos"
-		},
-		{
-			"source": "/api/verCarrito",
-			"function": "verCarrito"
-		},
-		{
-			"source": "/api/setEstado",
-			"function": "setEstado"
-		},
-		{
-			"source": "/api/subirImagenPlat",
-			"function": "subirImagenPlat"
-		},
-		{
-			"source": "/api/setUsuario",
-			"function": "setUsuario"
-		},
-		{
-			"source": "/api/setTarjeta",
-			"function": "setTarjeta"
-		},
-		{
-			"source": "/api/addRestaurante",
-			"function": "addRestaurante"
-		},
-		{
-			"source": "/api/modRestaurante",
-			"function": "modRestaurante"
-		},
-		{
-			"source": "/api/subirImagenRest",
-			"function": "subirImagenRest"
-		},
-		{
-			"source": "/api/calificar",
-			"function": "calificar"
-		},
-		{
-			"source": "/api/limpiarPedidos",
-			"function": "limpiarPedidos"
+			"source": "/api/*",
+			"function": "api"
 		},
 		{
 			"source": "**",
