--- a/functions/package.json
+++ b/functions/package.json
@@ -11,10 +11,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/firestore": "^0.14.1",
     "async": "^2.6.0",
     "child-process-promise": "^2.2.1",
-    "firebase-admin": "~5.12.0",
-    "firebase-functions": "^1.0.1"
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "firebase-admin": "5.12.1",
+    "firebase-functions": "1.0.4",
+    "install": "0.11.0",
+    "npm": "6.1.0"
   },
   "devDependencies": {
     "tslint": "^5.8.0",
