--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -21,12 +21,15 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@firebase/functions": "^0.2.4",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "@types/googlemaps": "^3.30.8",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "firebase": "^5.0.4",
     "jquery": "^3.3.1",
     "ngx-pagination": "^3.1.1",
+    "popper.js": "^1.14.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
